[gd_scene load_steps=2 format=2]

[ext_resource path="res://test.gd" type="Script" id=1]

[node name="Node2D" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="SymNod" type="TextureButton" parent="."]
margin_right = 190.0
margin_bottom = 116.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton1" type="ColorRect" parent="."]
margin_left = 110.875
margin_top = 170.807
margin_right = 222.875
margin_bottom = 252.807

[node name="TextureButton2" type="ColorRect" parent="."]
margin_left = 418.028
margin_top = 164.814
margin_right = 530.028
margin_bottom = 246.814

[node name="TextureButton3" type="ColorRect" parent="."]
margin_left = 702.706
margin_top = 167.81
margin_right = 814.706
margin_bottom = 249.81
